--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,16 @@
     <string name="app_name">StartBaby</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+
+    <!--在Person界面需要的字符常量-->
+    <string name="username">未登录</string>
+
+    <!--有关登录注册需要的常量-->
+
+    <string name="login_name">登录</string>
+    <string name="register_name">注册</string>
+    <string name="user_name">用户名</string>
+    <string name="user_pass">密码</string>
+    <string name="user_hint_name">请输入用户名</string>
+    <string name="user_hint_pass">请输入密码</string>
 </resources>
