--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,14 @@
     <string name="username">未登录</string>
 
     <!--有关登录注册需要的常量-->
-
     <string name="login_name">登录</string>
     <string name="register_name">注册</string>
     <string name="user_name">用户名</string>
     <string name="user_pass">密码</string>
-    <string name="user_hint_name">请输入用户名</string>
+    <string name="user_hint_name">请输入用户名/手机号/邮箱</string>
     <string name="user_hint_pass">请输入密码</string>
+    <string name="user_no_number">没有帐号？</string>
+    <string name="fast_register">快速注册</string>
+    <string name="thirdLogin">第三方登录</string>
+    <string name="number_register">手机号注册</string>
 </resources>
